--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Trends</title>
+    <title>Portfolio Pascal Oestrich</title>
     <link rel="style-aboutme" href="aboutMe.css">
     <link rel="stylesheet" href="style.css">
 
